Add path finding links for example graph

--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
 
       <div class="text">
         <p>Between which two point do you want to find shortest path?</p>
-        <form>
+        <form class="points-form">
           <div class="container container-points-main">
             <div class="container-points">
               <p>starting point:</p>
               <input
-                id="firstNode"
+                id="startPoint"
                 type="text"
                 required
                 placeholder="example: 1"
@@ -103,7 +103,7 @@
             <div class="container-points">
               <p>end point:</p>
               <input
-                id="firstNode"
+                id="endPoint"
                 type="text"
                 required
                 placeholder="example: 2"
