Add autoplay and path finding links for user graph

--- a/index.html
+++ b/index.html
@@ -18,6 +18,24 @@
         <button id="increaser" class="button">NEXT STEP</button>
       </div>
     </div>
+   
+  <div class="container" style="text-align: center;">
+    <div>
+      <p>
+        path finding through algorithm:
+      </p>
+      <hr class="hr hr-green">
+    </div>
+    <div>
+      <p>
+        shortest path:
+      </p>
+      <hr class="hr hr-red">
+    </div>
+  </div>
+  <div class="container">
+    <button id="auto" class="button">AUTOPLAY ALGORITHM</button>
+</div>
     <div class="container">
       <div>
         <div>
