Fix details in mobile view

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;500;600;700;800&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;600;700;800&display=swap"
     rel="stylesheet"
   />
   <link rel="stylesheet" href="style.css" />
@@ -117,7 +117,7 @@
             <form class="points-form">
               <div class="container container-points-main">
                 <div class="container-points">
-                  <p>start node:</p>
+                  <p>Start node:</p>
                   <input
                     id="startPoint"
                     type="text"
@@ -126,7 +126,7 @@
                   />
                 </div>
                 <div class="container-points">
-                  <p>end node:</p>
+                  <p>End node:</p>
                   <input
                     id="endPoint"
                     type="text"
@@ -136,14 +136,13 @@
                 </div>
               </div>
               <div>
-                <br />
                 <button class="button color-one">submit points</button>
               </div>
             </form>
             <div style="display: block">
               <form class="pure-form">
                 <div class="container-form">
-                  <div>
+                  <div class="container-new-link">
                     <p>Name of source node:</p>
                     <input
                       id="firstNode"
@@ -153,7 +152,7 @@
                       required
                     />
                   </div>
-                  <div>
+                  <div class="container-new-link">
                     <p>Name of targeted node:</p>
                     <input
                       id="secondNode"
@@ -162,7 +161,7 @@
                       placeholder="Enter second node name"
                     />
                   </div>
-                  <div>
+                  <div class="container-new-link">
                     <p>Weight of link between nodes:</p>
                     <input
                       id="linkValue"
